crates/squawk_parser/tests/snapshots/tests__create_language_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_language.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_LANGUAGE
    CREATE_KW "create"
    WHITESPACE " "
    LANGUAGE_KW "language"
    WHITESPACE " "
    LANGUAGE
      IDENT "l"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_LANGUAGE
    CREATE_KW "create"
    WHITESPACE " "
    OR_REPLACE
      OR_KW "or"
      WHITESPACE " "
      REPLACE_KW "replace"
    WHITESPACE " "
    TRUSTED_KW "trusted"
    WHITESPACE " "
    PROCEDURAL_KW "procedural"
    WHITESPACE " "
    LANGUAGE_KW "language"
    WHITESPACE " "
    LANGUAGE
      IDENT "l"
    WHITESPACE "\n  "
    HANDLER_CLAUSE
      HANDLER_KW "handler"
      WHITESPACE " "
      FUNCTION_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "bar"
    WHITESPACE "\n  "
    INLINE_CLAUSE
      INLINE_KW "inline"
      WHITESPACE " "
      FUNCTION_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "f"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "b"
    WHITESPACE "\n  "
    VALIDATOR_CLAUSE
      VALIDATOR_KW "validator"
      WHITESPACE " "
      FUNCTION_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "x"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "y"
    SEMICOLON ";"
  WHITESPACE "\n\n"
