crates/squawk_parser/tests/snapshots/tests__create_policy_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_policy.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- as_"
  WHITESPACE "\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE "\n  "
    AS_POLICY_TYPE
      AS_KW "as"
      WHITESPACE " "
      IDENT "permissive"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE "\n  "
    AS_POLICY_TYPE
      AS_KW "as"
      WHITESPACE " "
      IDENT "restrictive"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE "\n  "
    AS_POLICY_TYPE
      AS_KW "as"
      WHITESPACE " "
      IDENT "permissive"
    WHITESPACE "\n  "
    POLICY_COMMAND
      FOR_KW "for"
      WHITESPACE " "
      POLICY_COMMAND_ALL
        ALL_KW "all"
    WHITESPACE "\n  "
    POLICY_ROLES
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF_LIST
        ROLE_REF
          ROLE_NAME_REF
            IDENT "public"
        COMMA ","
        WHITESPACE " "
        ROLE_REF
          ROLE_REF_CURRENT_ROLE
            CURRENT_ROLE_KW "current_role"
        COMMA ","
        WHITESPACE " "
        ROLE_REF
          ROLE_REF_CURRENT_USER
            CURRENT_USER_KW "current_user"
        COMMA ","
        WHITESPACE " "
        ROLE_REF
          ROLE_REF_SESSION_USER
            SESSION_USER_KW "session_user"
    WHITESPACE "\n  "
    USING_EXPR_CLAUSE
      USING_KW "using"
      WHITESPACE " "
      L_PAREN "("
      BIN_EXPR
        BIN_EXPR
          NAME_REF
            IDENT "x"
          WHITESPACE " "
          R_ANGLE ">"
          WHITESPACE " "
          NAME_REF
            IDENT "b"
        WHITESPACE " "
        AND_KW "and"
        WHITESPACE " "
        BIN_EXPR
          LITERAL
            INT_NUMBER "1"
          WHITESPACE " "
          L_ANGLE "<"
          WHITESPACE " "
          LITERAL
            INT_NUMBER "2"
      R_PAREN ")"
    WHITESPACE "\n  "
    WITH_CHECK_EXPR_CLAUSE
      WITH_KW "with"
      WHITESPACE " "
      CHECK_KW "check"
      WHITESPACE " "
      L_PAREN "("
      WHITESPACE " "
      BIN_EXPR
        NAME_REF
          IDENT "x"
        WHITESPACE " "
        L_ANGLE "<"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "1"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- for_"
  WHITESPACE "\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE "\n  "
    POLICY_COMMAND
      FOR_KW "for"
      WHITESPACE " "
      POLICY_COMMAND_ALL
        ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE "\n  "
    POLICY_COMMAND
      FOR_KW "for"
      WHITESPACE " "
      POLICY_COMMAND_SELECT
        SELECT_KW "select"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE "\n  "
    POLICY_COMMAND
      FOR_KW "for"
      WHITESPACE " "
      POLICY_COMMAND_INSERT
        INSERT_KW "insert"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE "\n  "
    POLICY_COMMAND
      FOR_KW "for"
      WHITESPACE " "
      POLICY_COMMAND_UPDATE
        UPDATE_KW "update"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_POLICY
    CREATE_KW "create"
    WHITESPACE " "
    POLICY_KW "policy"
    WHITESPACE " "
    POLICY
      IDENT "p"
    WHITESPACE " "
    ON_TABLE
      ON_KW "on"
      WHITESPACE " "
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE "\n  "
    POLICY_COMMAND
      FOR_KW "for"
      WHITESPACE " "
      POLICY_COMMAND_DELETE
        DELETE_KW "delete"
    SEMICOLON ";"
  WHITESPACE "\n\n"
