crates/squawk_parser/tests/snapshots/tests__create_procedure_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_procedure.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_PROCEDURE
    CREATE_KW "create"
    WHITESPACE " "
    PROCEDURE_KW "procedure"
    WHITESPACE " "
    PROCEDURE_NAME
      PATH
        PATH_SEGMENT
          IDENT "p"
    PARAM_LIST
      L_PAREN "("
      R_PAREN ")"
    WHITESPACE "\n"
    FUNC_OPTION_LIST
      LANGUAGE_FUNC_OPTION
        LANGUAGE_KW "language"
        WHITESPACE " "
        LANGUAGE_REF
          SQL_KW "sql"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_PROCEDURE
    CREATE_KW "create"
    WHITESPACE " "
    OR_REPLACE
      OR_KW "or"
      WHITESPACE " "
      REPLACE_KW "replace"
    WHITESPACE " "
    PROCEDURE_KW "procedure"
    WHITESPACE " "
    PROCEDURE_NAME
      PATH
        PATH_SEGMENT
          IDENT "p"
    PARAM_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      PARAM
        PARAM_IN
          IN_KW "in"
        WHITESPACE " "
        PARAM_NAME
          IDENT "a"
        WHITESPACE " "
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              TEXT_KW "text"
        WHITESPACE " "
        PARAM_DEFAULT
          DEFAULT_KW "DEFAULT"
          WHITESPACE " "
          LITERAL
            STRING "'foo'"
      COMMA ","
      WHITESPACE "\n  "
      PARAM
        PARAM_OUT
          OUT_KW "out"
        WHITESPACE " "
        PARAM_NAME
          IDENT "b"
        WHITESPACE " "
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              BIGINT_KW "bigint"
        WHITESPACE " "
        PARAM_DEFAULT
          EQ "="
          WHITESPACE " "
          LITERAL
            INT_NUMBER "10"
      COMMA ","
      WHITESPACE "\n  "
      PARAM
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              BIGINT_KW "bigint"
        WHITESPACE " "
        PARAM_DEFAULT
          EQ "="
          WHITESPACE " "
          LITERAL
            INT_NUMBER "1"
      WHITESPACE "\n"
      R_PAREN ")"
    WHITESPACE "\n"
    FUNC_OPTION_LIST
      LANGUAGE_FUNC_OPTION
        LANGUAGE_KW "language"
        WHITESPACE " "
        LANGUAGE_REF
          SQL_KW "sql"
      WHITESPACE "\n"
      TRANSFORM_FUNC_OPTION
        TRANSFORM_KW "transform"
        WHITESPACE " "
        TRANSFORM_FOR_TYPE
          FOR_KW "for"
          WHITESPACE " "
          TYPE_KW "type"
          WHITESPACE " "
          PATH_TYPE
            PATH_REF
              PATH_REF
                PATH_SEGMENT_REF
                  IDENT "foo"
              DOT "."
              PATH_SEGMENT_REF
                IDENT "t"
        COMMA ","
        WHITESPACE " "
        TRANSFORM_FOR_TYPE
          FOR_KW "for"
          WHITESPACE " "
          TYPE_KW "type"
          WHITESPACE " "
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                TEXT_KW "text"
      WHITESPACE "\n"
      SECURITY_INVOKER_FUNC_OPTION
        EXTERNAL_KW "external"
        WHITESPACE " "
        SECURITY_KW "security"
        WHITESPACE " "
        INVOKER_KW "invoker"
      WHITESPACE "\n"
      SET_FUNC_OPTION
        SET_CONFIG_PARAM
          SET_KW "set"
          WHITESPACE " "
          CONFIG_PARAMETER_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "foo"
          WHITESPACE " "
          TO_CONFIG_VALUE
            TO_KW "to"
            WHITESPACE " "
            LITERAL
              TRUE_KW "true"
      WHITESPACE "\n"
      SET_FUNC_OPTION
        SET_CONFIG_PARAM
          SET_KW "set"
          WHITESPACE " "
          CONFIG_PARAMETER_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "bar"
          WHITESPACE " "
          TO_CONFIG_VALUE
            EQ "="
            WHITESPACE " "
            LITERAL
              FALSE_KW "false"
      WHITESPACE "\n"
      SET_FUNC_OPTION
        SET_CONFIG_PARAM
          SET_KW "set"
          WHITESPACE " "
          CONFIG_PARAMETER_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "buzz"
          WHITESPACE " "
          FROM_CURRENT
            FROM_KW "from"
            WHITESPACE " "
            CURRENT_KW "current"
    WHITESPACE "\n"
    RETURN_STMT
      RETURN_KW "return"
      WHITESPACE " "
      BIN_EXPR
        LITERAL
          INT_NUMBER "10"
        WHITESPACE " "
        PLUS "+"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "1"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- security_variants"
  WHITESPACE "\n"
  CREATE_PROCEDURE
    CREATE_KW "create"
    WHITESPACE " "
    PROCEDURE_KW "procedure"
    WHITESPACE " "
    PROCEDURE_NAME
      PATH
        PATH_SEGMENT
          IDENT "p"
    PARAM_LIST
      L_PAREN "("
      R_PAREN ")"
    WHITESPACE " "
    FUNC_OPTION_LIST
      LANGUAGE_FUNC_OPTION
        LANGUAGE_KW "language"
        WHITESPACE " "
        LANGUAGE_REF
          SQL_KW "sql"
      WHITESPACE " "
      SECURITY_INVOKER_FUNC_OPTION
        SECURITY_KW "security"
        WHITESPACE " "
        INVOKER_KW "invoker"
      WHITESPACE " "
      AS_FUNC_OPTION
        AS_KW "as"
        WHITESPACE " "
        AS_DEFINITION
          LITERAL
            STRING "'select 1'"
    SEMICOLON ";"
  WHITESPACE "\n"
  CREATE_PROCEDURE
    CREATE_KW "create"
    WHITESPACE " "
    PROCEDURE_KW "procedure"
    WHITESPACE " "
    PROCEDURE_NAME
      PATH
        PATH_SEGMENT
          IDENT "p"
    PARAM_LIST
      L_PAREN "("
      R_PAREN ")"
    WHITESPACE " "
    FUNC_OPTION_LIST
      LANGUAGE_FUNC_OPTION
        LANGUAGE_KW "language"
        WHITESPACE " "
        LANGUAGE_REF
          SQL_KW "sql"
      WHITESPACE " "
      SECURITY_DEFINER_FUNC_OPTION
        EXTERNAL_KW "external"
        WHITESPACE " "
        SECURITY_KW "security"
        WHITESPACE " "
        DEFINER_KW "definer"
      WHITESPACE " "
      AS_FUNC_OPTION
        AS_KW "as"
        WHITESPACE " "
        AS_DEFINITION
          LITERAL
            STRING "'select 1'"
    SEMICOLON ";"
  WHITESPACE "\n"
  CREATE_PROCEDURE
    CREATE_KW "create"
    WHITESPACE " "
    PROCEDURE_KW "procedure"
    WHITESPACE " "
    PROCEDURE_NAME
      PATH
        PATH_SEGMENT
          IDENT "p"
    PARAM_LIST
      L_PAREN "("
      R_PAREN ")"
    WHITESPACE " "
    FUNC_OPTION_LIST
      LANGUAGE_FUNC_OPTION
        LANGUAGE_KW "language"
        WHITESPACE " "
        LANGUAGE_REF
          SQL_KW "sql"
      WHITESPACE " "
      SECURITY_DEFINER_FUNC_OPTION
        SECURITY_KW "security"
        WHITESPACE " "
        DEFINER_KW "definer"
      WHITESPACE " "
      AS_FUNC_OPTION
        AS_KW "as"
        WHITESPACE " "
        AS_DEFINITION
          LITERAL
            STRING "'select 1'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- as_with_two_strings"
  WHITESPACE "\n"
  CREATE_PROCEDURE
    CREATE_KW "create"
    WHITESPACE " "
    PROCEDURE_KW "procedure"
    WHITESPACE " "
    PROCEDURE_NAME
      PATH
        PATH_SEGMENT
          IDENT "p"
    PARAM_LIST
      L_PAREN "("
      R_PAREN ")"
    WHITESPACE " "
    FUNC_OPTION_LIST
      LANGUAGE_FUNC_OPTION
        LANGUAGE_KW "language"
        WHITESPACE " "
        LANGUAGE_REF
          IDENT "c"
      WHITESPACE " "
      AS_FUNC_OPTION
        AS_KW "as"
        WHITESPACE " "
        AS_OBJ_FILE
          LITERAL
            STRING "'foo'"
          COMMA ","
          WHITESPACE " "
          LITERAL
            STRING "'bar'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_select_body"
  WHITESPACE "\n"
  CREATE_PROCEDURE
    CREATE_KW "create"
    WHITESPACE " "
    OR_REPLACE
      OR_KW "or"
      WHITESPACE " "
      REPLACE_KW "replace"
    WHITESPACE " "
    PROCEDURE_KW "procedure"
    WHITESPACE " "
    PROCEDURE_NAME
      PATH
        PATH_SEGMENT
          IDENT "p"
    PARAM_LIST
      L_PAREN "("
      R_PAREN ")"
    WHITESPACE "\n"
    FUNC_OPTION_LIST
      LANGUAGE_FUNC_OPTION
        LANGUAGE_KW "language"
        WHITESPACE " "
        LANGUAGE_REF
          SQL_KW "sql"
    WHITESPACE "\n"
    ATOMIC_BODY
      BEGIN_KW "begin"
      WHITESPACE " "
      ATOMIC_KW "atomic"
      WHITESPACE "\n  "
      SELECT
        SELECT_CLAUSE
          SELECT_KW "select"
          WHITESPACE " "
          TARGET_LIST
            TARGET
              LITERAL
                INT_NUMBER "1"
        SEMICOLON ";"
      WHITESPACE "\n  "
      SELECT
        SELECT_CLAUSE
          SELECT_KW "select"
          WHITESPACE " "
          TARGET_LIST
            TARGET
              LITERAL
                INT_NUMBER "2"
        SEMICOLON ";"
      WHITESPACE "\n"
      END_KW "end"
    SEMICOLON ";"
  WHITESPACE "\n\n"
